change proto file

--- a/protoc.cfg
+++ b/protoc.cfg
@@ -1,3 +1,2 @@
--I./proto_files
--I./vendor
---go_out=plugins=grpc,paths=source_relative:./proto_models
+-I./
+--go_out=plugins=grpc,paths=source_relative:.
